Make the Wolfram Hello World unit test run
